# bevy_fighter

./: Cargo.toml  README.md
.github/workflows/: cargo.yml
assets/character_data/: aoko.json  roa.json
examples/inputs/: input_stream.rs
examples/movement/: basic_movement.rs
src/: animation.rs  aoko.json  camera.rs  character.rs  character_library.rs  collision.rs  constants.rs  debug_ui.rs  fighter_plugin.rs  lib.rs  physics.rs  player.rs  player_data.rs  player_systems.rs  roa.json  test.json  utils.rs
src/animation/: animation.components.rs  animation.systems.rs  animation_library.rs  mod.rs  spritesheet.rs
src/attacks/: attack.components.rs  attack.systems.rs  mod.rs
src/character/: character.components.rs  character.systems.rs  mod.rs  state.rs
src/collision/: hitbox.rs  hurtbox.rs  mod.rs
src/display/: input_display.rs  mod.rs
src/inputs/: buffer.rs  input_events.rs  mapping.rs  mod.rs  motion.rs
src/movement/: dashes.rs  mod.rs  physics.rs  player_movement.rs
src/movement/command_movement/: airdash.rs  backdash.rs  mod.rs  movement_traits.rs
src/movement/command_movement/dashes/: mod.rs  stepdash.rs
src/player/: mod.rs  player_states.rs
src/state/: state.components.rs  state.systems.rs
tests/: buffer.rs  utils.rs
