[package]
name = "bevy_fighter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_backroll = "0.1"
regex = "1.4.6"
phf = { version = "0.9", features = ["macros"] }
lazy_static = "1.4.0"


[[example]]
name = "input_stream"
path = "examples/inputs/input_stream.rs"

[[example]]
name = "basic_movement"
path = "examples/movement/basic_movement.rs"
