[package]
name = "bevy_fighter"
license = "MIT"
repository = "https://github.com/spooky-th-ghost/bevy_fighter"
description = "A mildly opinionated micro-engine for building 2D fighting games with bevy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = "0.6.0"
bevy_backroll = "0.1"
serde_json = "1.0"
regex = "1.4.6"
phf = { version = "0.9", features = ["macros"] }
lazy_static = "1.4.0"
lerp = { version = "0.4", features = ["derive"] }


[[example]]
name = "input_stream"
path = "examples/inputs/input_stream.rs"

[[example]]
name = "basic_movement"
path = "examples/movement/basic_movement.rs"
